--- a/src/components/Dropdown/Dropdown.css
+++ b/src/components/Dropdown/Dropdown.css
@@ -4,6 +4,9 @@
   text-align: left;
 }
 
+.dropdown-select {
+  padding: 0 5px;
+}
 .dropdown-select:hover {
   cursor: pointer;
 }
@@ -15,35 +18,16 @@
   margin: 5px 0;
   padding: 0;
 
-  border: 1px solid grey;
+  border: 1px solid lightgray;
   width: 150px;
 }
 
-.menu > li {
-  margin: 0;
-
-  background-color: white;
-}
-
-.menu > li:hover {
-  background-color: lightgray;
-}
-
-.menu > li > button {
-  width: 100%;
-  height: 100%;
-  text-align: left;
-
-  background: none;
-  color: inherit;
-  border: none;
+.menu-item {
   padding: 5px;
-  margin: 0;
-  font: inherit;
-  cursor: pointer;
+  font-size: 12px;
 }
 
 .menu-item:hover {
-  background-color: lightgray;
+  background-color: #f5f5f5;
   cursor: pointer;
 }
