--- a/src/components/TreeNode/TreeNode.css
+++ b/src/components/TreeNode/TreeNode.css
@@ -1,3 +1,24 @@
 .tree-node-container {
   /* display: flex; */
 }
+
+.tree-node-post {
+  border: 1px solid lightgray;
+  border-radius: 10px;
+  padding: 10px;
+  max-width: 200px;
+  height: 80px;
+  font-size: 12px;
+  text-align: left;
+}
+
+.tree-node-post:hover {
+  background-color: #f5f5f5;
+  cursor: pointer;
+}
+
+.tree-node-post-header {
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 8px;
+}
