--- a/src/components/Tree/Tree.css
+++ b/src/components/Tree/Tree.css
@@ -1,16 +1,6 @@
-.tree-container {
-  /* display: block; */
-  /* max-width: 300px; */
-}
-
 .tree-nodes-container {
   overflow: hidden;
   transition: max-height 0.2s ease-out;
-}
-
-.accordion {
-  /* border: 1px solid #ccc; */
-  /* border-radius: 4px; */
 }
 
 .accordion-button {
@@ -26,18 +16,9 @@
   background-color: #f3dfff;
 }
 
-/* .accordian-button:first-child {
-  border-radius: 10px;
-}
-.accordion-button:last-child {
-  border-bottom: none;
-  border-radius: 10px;
-} */
-
 .accordion-button:hover {
-  color: white;
-
   background-color: #9236cd;
+  color: white;
 }
 
 .accordion-content {
@@ -49,6 +30,5 @@
 }
 
 .accordion-content.active {
-  max-height: 300px; /* Adjust based on the content height */
-  /* padding: 15px 15px 0 15px; */
+  max-height: 300px;
 }
