--- a/src/components/Tree/Tree.css
+++ b/src/components/Tree/Tree.css
@@ -25,7 +25,7 @@
   max-height: 0;
   overflow: auto;
   transition: max-height 0.2s ease-out;
-  background-color: #f9f9f9;
+  background-color: #f9f0ff;
   padding: 0;
 }
 
